--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
-=========================================================================
 
-Portfolio Page
+<!-- Home Page -->
 
-=========================================================================
--->
 <head>
 
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<!--- CSS Reset -->
-	<link href="styles/reset.css" rel="stylesheet" />
+
+	<title>Donovan's  Portfolio</title>
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -29,117 +26,46 @@ Portfolio Page
 	<!-- CSS -->
 	<link href="styles/main.css" rel="stylesheet" />
 
-	<!-- Title -->
-	<title>Donovan Lo's Portfolio</title>
-
 </head>
 
 <body>
 
-<!--
-=========================================================================
+	<header id="#pageheader">
 
-Header 
+		<!-- Navbar component -->
+		<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
+			<div class="container">
+				<!-- Logo -->
+				<a class="navbar-brand"
+					href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
 
-=========================================================================
--->
-<body>
-	<header id="#pageheader" >
-        <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-            <div class="container">
-                <!-- Logo -->
-                <a class="navbar-brand"
-                    href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
-
-                <!-- Hamburger -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<!-- Hamburger -->
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                
-                <!-- Main Navigation -->
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio</a><span class="sr-only">(current)</span></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-  	</header>
-<!--
+
+					<!-- Main Navigation -->
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="nav-link"
+									href="resume.html">Resume</a></li>
+							<li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a></li>
+						</ul>
+					</div>
+			</div>
+		</nav>
+	</header>
+	<!--
 =========================================================================
 
-Main section
+Main Content section
 
 =========================================================================
 -->
 
-	<main class="container">
-		<section >
-			<div class="row">
-
-				<div class="col-12 col-sm-6  col-md-4 col-lg-3 bg-primary">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-				<div class="col-12  col-sm-6  col-md-4 col-lg-3 bg-secondary">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-				<div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-success">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-				<div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-danger">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-			</div>
-
-		</section>
-
-
+	<main>
+	
 
 
 	</main>
@@ -152,105 +78,154 @@ Footer section
 
 =========================================================================
 -->
+	<footer id="#pagefooter">
+
+		<!-- Pagination component -->
+
+		<nav aria-label="Page navigation" id="pagenavigation">
+			<ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
+				<li class="page-item ">
+					<a class="page-link" aria-label="Previous" >
+						<span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span>
+						<span class="sr-only">Previous</span> 
+					</a>
+				</li>
+				<li class="page-item "><a class="page-link">1 <span class="sr-only">(current)</span></a></li>
+				<!-- @@@ to edit accordingly for different page -->
+				<li class="page-item"><a class="page-link">2</a></li>
+				<li class="page-item active"><a class="page-link">3 <span class="sr-only">(current)</span></a></li>
+				<li class="page-item disabled">
+					<a class="page-link" aria-label="Next" tabindex="-1">
+						<span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+
+		<!-- Contact Me section -->
+		<div id="pagefootermiddle" class="container-fluid">
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-sm-4">
+							<h1>Contact Information</h1>
+							<p class="contactitem">
+								<i class="fa fa-phone" aria-hidden="true"></i><span class="sr-only">Mobile</span>
+								<my-contact number-user="+65 9683" number-domain=" 6694">@</my-contact>
+							</p>
+							<p class="contactitem">
+								<i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
+								<!-- Set data-user and data-domain as your  mail username and domain respectively -->
+								<my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
+							</p>
+							<p class="contactitem">
+								<i class="fa fa-linkedin" aria-hidden="true"></i><span class="sr-only">LinkedIn</span><a
+									href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
+							<p class="contactitem">
+								<i class="fa fa-user-circle-o" aria-hidden="true"></i><span class="sr-only">Profile</span><a
+									href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
+						</div>
+						<div class="col-12 col-sm-8">
+							<h1>Contact Me Form</h1>
+
+						</div>
+
+					</div>
+				</div>
+			</section>
+		</div>
 
 
-	<!--
-    Starts of footer
-
-    The footer contains a Bootscrap pagination component,
-    contact details, contact form and a site map navigation.
-    -->
-
-    <!-- The linear page navigation -->
-	<footer class="container">
-		<section id="linear-navigation justify-content-center">
-			<nav aria-label="Page navigation">
-				<ul class="pagination justify-content-center ">
-					<li class="page-item  p-2">
-						<a class="page-link" href="resume.html" aria-label="Previous">
-							<span aria-hidden="true">&laquo;</span>
-						</a>
+		<!-- Site Map Navigation -->
+		<nav aria-label="Site Map navigation">
+			<section id="footer-sitemap" class="container">
+				<ul class="row ">
+					<li class="col-12 col-sm-6 col-md-3"><a href="index.html:" class="sitemap-header">Home</a>
+						<ul class="footer-sitemap-li">
+							<li><a href="index.html#bio">Bio</a></li>
+							<li><a href="index.html#value-proposition">Value Proposition</a></li>
+							<li><a href="index.html#motivator">Motivator</a></li>
+							<li><a href="index.html#interest">Interest</a></li>
+							<li><a href="index.html#testimonials">Testimonials</a></li>
+							<li><a href="index.html#membership">Membership</a></li>
+							<li><a href="index.html#personality-test">Personality Test Result</a></li>
+						</ul>
 					</li>
-					<li class="page-item p-2 "><a class="page-link" href="index.html">1</a></li>
-					<li class="page-item p-2 "><a class="page-link" href="resume.html">2</a></li>
-					<li class="page-item p-2 active " ><a class="page-link" href="portfolio.html">3</a></li>
-					<li class="page-item p-2 disabled">
-						<a class="page-link " href="#" aria-label="Next">
-							<span aria-hidden="true">&raquo;</span>
-						</a>
+					<li class=" col-12 col-sm-6 col-md-3"><a href="resume.html" class="sitemap-header">Resume</a>
+						<ul class="footer-sitemap-li">
+							<li><a href="resume.html#objective">Objective</a></li>
+							<li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
+							<li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
+							<li><a href="resume.html#education">Education</a></li>
+							<li><a href="resume.html#skills">Skills</a></li>
+							<li><a href="resume.html#certificates">Certificates</a></li>
+							<li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
+						</ul>
+					</li>
+					<li class=" col-12 col-sm-6 col-md-3">
+						<a href="portfolio.html" class="sitemap-header">Portfolio</a>
+						<ul class=" footer-sitemap-li ">
+							<li><a href="portfolio.html#project-1 ">Project #1</a></li>
+							<li><a href="portfolio.html#project-2 ">Project #2</a></li>
+							<li><a href="portfolio.html#project-3 ">Project #3</a></li>
+							<li><a href="portfolio.html#project-4 ">Project #4</a></li>
+						</ul>
+					</li>
+					<li class="sitemap-header">
+					<li><a href="resume.html" class="download-resume">Download</a></li>
 					</li>
 				</ul>
-    		</nav>
-		</section>
+				&nbsp;
+			</section>
 
-        <!-- The contact section -->
 
-        <section id="contact-section" class="container">
-            <div class="row">
-                <div class="col">
-                    Contact Details
-                </div>
-                <div class="col">
-                    More Contact Details
-                </div>
-                <div class="col">
-                    Contact Form
-                </div>
-            </div>
-        </section>
+		</nav>
 
-        <!-- The site map navigation -->
 
-		<section id="footer-sitemap" class="container">
-			<ul class="row ">
-				<li class="col-12 col-sm-6 col-md-3"><a href="index.html:" class="sitemap-header">Home</a>
-					<ul class="footer-sitemap-li">
-						<li><a href="index.html#bio">Bio</a></li>
-                        <li><a href="index.html#value-proposition">Value Proposition</a></li>
-                        <li><a href="index.html#interest">Interest</a></li>
-						<li><a href="index.html#testimonials">Testimonials</a></li>
-                        <li><a href="index.html#membership">Membership</a></li>
-                        <li><a href="index.html#personality-test">Personality Test</a></li>
-					</ul>
-				</li>
-				<li class=" col-12 col-sm-6 col-md-3"><a href="resume.html" class="sitemap-header">Resume</a>
-					<ul class="footer-sitemap-li">
-						<li><a href="resume.html#objective">Objective</a></li>
-						<li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
-						<li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
-						<li><a href="resume.html#education">Education</a></li>
-						<li><a href="resume.html#skills">Skills</a></li>
-						<li><a href="resume.html#certificates">Certificates</a></li>
-                        <li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
-					</ul>
-				</li>
-				<li class=" col-12 col-sm-6 col-md-3">
-					<a href="portfolio.html" class="sitemap-header">Portfolio</a>
-                    <ul class=" footer-sitemap-li ">
-                        <li><a href="portfolio.html#project-1 ">Project #1</a></li>
-                        <li><a href="portfolio.html#project-2 ">Project #2</a></li>
-                        <li><a href="portfolio.html#project-3 ">Project #3</a></li>
-                        <li><a href="portfolio.html#project-4 ">Project #4</a></li>
-                    </ul>
-                    <ul class="sitemap-header">
-                        <li><a href="resume.html" class="download-resume">Download</a></li>
-                    </ul>
-                </li>
-            </ul>
-            &nbsp;
-        </section>
-    </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src=" https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="
-						sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="
-						anonymous "></script>
-    <script src=" https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="
-						sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="
-						anonymous "></script>
-    <script src=" https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="
-						sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="
-						anonymous "></script>
+
+
+
+	</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!-- Bootstrap CSS -->
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
