--- a/resume.html
+++ b/resume.html
@@ -78,9 +78,11 @@ Main Content section
 		<section>
             <div class="container">
                 <div class="row">
-                    <h1>Objectives</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.
-                    </p>
+                    <div class="col-12">
+                        <h1>Objectives</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.
+                        </p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-8 order-md-1">
@@ -114,19 +116,21 @@ Main Content section
                     </div>
                 </div>
                 <div class="row">
-                    <h1>Certificates and Projects</h1>
-                        <ul>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                        </ul>
+                    <div class="col">
+                        <h1>Certificates and Projects</h1>
+                            <ul>
+                                <li>xxx</li>
+                                <li>xxx</li>
+                                <li>xxx</li>
+                                <li>xxx</li>
+                            </ul>
+                        </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6">
                         <h1>Volunteering</h1>
                     </div>
-                    <div clas="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6">
                         <h1>Download</h1>
                         <p> printer friendly resume</p>
                     </div>
